* fixed layout bug in time-range selector

--- a/core/asset/css/timerange.css
+++ b/core/asset/css/timerange.css
@@ -105,7 +105,7 @@
 .timerange .dates .ranges {
 	position:absolute;
 	top:0;
-	z-index:0;
+	z-index:1000;
 	left:50%;
 	right: 50%;
 	width:185px;
